refactor and add code for device testing

--- a/onnxruntime/bin/CMakeLists.txt
+++ b/onnxruntime/bin/CMakeLists.txt
@@ -5,8 +5,8 @@ include_directories(untitled ${Boost_INCLUDE_DIRS})
 add_executable(kws_main kws_main.cc)
 target_link_libraries(kws_main PUBLIC onnxruntime frontend kws ${Boost_LIBRARIES})
 
-add_executable(kws_testing kws_testing.cc)
-target_link_libraries(kws_testing PUBLIC onnxruntime frontend kws ${Boost_LIBRARIES})
+add_executable(stream_kws_testing stream_kws_testing.cc)
+target_link_libraries(stream_kws_testing PUBLIC onnxruntime frontend kws ${Boost_LIBRARIES})
 
 add_executable(device_test device_test.cc)
 target_link_libraries(device_test PUBLIC portaudio_static)
